navbar section are fully mobile responsive done

--- a/index.html
+++ b/index.html
@@ -5,12 +5,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=G, initial-scale=1.0">
   <title>Flower-market</title>
-  <link rel="stylesheet" href="css/style.css">
+  <!-- Fonts awesome  cdn link  -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+    integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Style sheet Link  -->
+  <link rel="stylesheet" href="./css/style.css">
+  <!-- Responsive Sheet link  -->
+  <link rel="stylesheet" href="./css/responsive.css">
 </head>
 
 <body>
   <header>
-    <nav>
+    <nav id="navbar">
+      <div class="container">
+        <div class="navbar_wrapper">
+          <div class="navbar_left">
+            <!-- nav- logo  -->
+            <a href="#"> <img src="./images/logo.png" alt="Logo"></a>
+          </div>
+          <div class="navbar_right">
+            <!-- nav-menu -->
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Shop</a></li>
+              <li><a href="#">About us</a></li>
+            </ul>
+            <!-- nav-icon -->
+            <div class="navbar_icons">
+              <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+              <a href="#">Cart ($56)</a>
+
+            </div>
+          </div>
+        </div>
+      </div>
 
     </nav>
   </header>
