Hero section markup stle and responsive done

--- a/index.html
+++ b/index.html
@@ -42,6 +42,22 @@
       </div>
 
     </nav>
+    <section id="hero">
+      <div class="container">
+        <div class="hero_wrapper">
+          <div class="hero_left-content">
+            <h1>ALWAYS <span>FRESH</span> <br><span>FLOWERS</span></h1>
+            <p class="section-description">Indulge your senses with the beauty and fragrance of our fresh flower shop.
+              From classic roses to exotic
+              blooms, we
+              offer a wide variety of fresh flowers that are perfect for any occasion.</p>
+          </div>
+          <div class="hero_right-image">
+            <img src="./images/hero-flower.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
   </header>
 
 </body>
