--- a/index.html
+++ b/index.html
@@ -59,6 +59,119 @@
       </div>
     </section>
   </header>
+  <main>
+    <section id="plants">
+      <div class="container">
+        <div class="plants_wrapper">
+          <div class="plants_content">
+            <h2 class="section-title"><span>Our</span> Plants</h2>
+            <p class="section-description">Indulge your senses with the beauty and fragrance of our fresh flower shop.
+              From classic roses to exotic
+              blooms, we
+              offer a wide variety of fresh.</p>
+          </div>
+          <div class="plants_items">
+            <div class="plants_item">
+              <div class="item_img">
+                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+              </div>
+              <div class="item_content">
+                <h4>Lily Blossom</h4>
+                <span>20 USD</span>
+              </div>
+              <div class="item-button">
+                ADD TO CART
+              </div>
+            </div>
+            <div class="plants_item">
+              <div class="item_img">
+                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+              </div>
+              <div class="item_content">
+                <h4>Lily Blossom</h4>
+                <span>20 USD</span>
+              </div>
+              <div class="item-button">
+                ADD TO CART
+              </div>
+            </div>
+            <div class="plants_item">
+              <div class="item_img">
+                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+              </div>
+              <div class="item_content">
+                <h4>Lily Blossom</h4>
+                <span>20 USD</span>
+              </div>
+              <div class="item-button">
+                ADD TO CART
+              </div>
+            </div>
+            <div class="plants_item">
+              <div class="item_img">
+                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+              </div>
+              <div class="item_content">
+                <h4>Lily Blossom</h4>
+                <span>20 USD</span>
+              </div>
+              <div class="item-button">
+                ADD TO CART
+              </div>
+            </div>
+            <div class="plants_item">
+              <div class="item_img">
+                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+              </div>
+              <div class="item_content">
+                <h4>Lily Blossom</h4>
+                <span>20 USD</span>
+              </div>
+              <div class="item-button">
+                ADD TO CART
+              </div>
+            </div>
+            <div class="plants_item">
+              <div class="item_img">
+                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+              </div>
+              <div class="item_content">
+                <h4>Lily Blossom</h4>
+                <span>20 USD</span>
+              </div>
+              <div class="item-button">
+                ADD TO CART
+              </div>
+            </div>
+            <div class="plants_item">
+              <div class="item_img">
+                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+              </div>
+              <div class="item_content">
+                <h4>Lily Blossom</h4>
+                <span>20 USD</span>
+              </div>
+              <div class="item-button">
+                ADD TO CART
+              </div>
+            </div>
+            <div class="plants_item">
+              <div class="item_img">
+                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+              </div>
+              <div class="item_content">
+                <h4>Lily Blossom</h4>
+                <span>20 USD</span>
+              </div>
+              <div class="item-button">
+                ADD TO CART
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
 </body>
 
