The FlowerLove section is fully responsive. I have positioned the brand logo and hidden it on mobile devices.

--- a/index.html
+++ b/index.html
@@ -171,6 +171,34 @@
         </div>
       </div>
     </section>
+    <section id="plantsLover">
+      <div class="container">
+        <div class="plantsLover_wrapper">
+          <div class="trusted_badge">
+            <img src="./images/trusted-badge.png" alt="trusted-badge">
+          </div>
+          <div class="plantsLover_left_image">
+            <img src="./images/flower-store.png" alt="flower-store">
+
+          </div>
+          <div class="plantsLover_right_content">
+            <h3>Flower & Plants Lover</h3>
+            <ul>
+              <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to
+                exotic blooms, we
+                offer a wide variety of fresh.</li>
+              <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to
+                exotic blooms, we
+                offer a wide variety of fresh.</li>
+              <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to
+                exotic blooms, we
+                offer a wide variety of fresh.</li>
+
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
 </body>
