Some section are comented

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
   <header>
+    /* ======= navbar Section Start Here ======= */
     <nav id="navbar">
       <div class="container">
         <div class="navbar_wrapper">
@@ -42,6 +43,7 @@
       </div>
 
     </nav>
+    /* ======= Hero Section End Here ======= */
     <section id="hero">
       <div class="container">
         <div class="hero_wrapper">
@@ -58,8 +60,10 @@
         </div>
       </div>
     </section>
+
   </header>
   <main>
+    /* ======= Plants Section Start Here ======= */
     <section id="plants">
       <div class="container">
         <div class="plants_wrapper">
@@ -171,6 +175,8 @@
         </div>
       </div>
     </section>
+    /* ======= Plants Section End Here ======= */
+    /* ======= Plants Lover Section Start Here ======= */
     <section id="plantsLover">
       <div class="container">
         <div class="plantsLover_wrapper">
@@ -199,6 +205,15 @@
         </div>
       </div>
     </section>
+    /* ======= Plants Lover Section End Here ======= */
+    /* ======= navbar Section Start Here ======= */
+    /* ======= navbar Section End Here ======= */
+    /* ======= navbar Section Start Here ======= */
+    /* ======= navbar Section End Here ======= */
+    /* ======= navbar Section Start Here ======= */
+    /* ======= navbar Section End Here ======= */
+
+
   </main>
 
 </body>
