some correction and deles section are fully responsive

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    /* ======= navbar Section Start Here ======= */
+    <!-- /* ======= navbar Section Start Here ======= */ -->
     <nav id="navbar">
       <div class="container">
         <div class="navbar_wrapper">
@@ -43,7 +43,7 @@
       </div>
 
     </nav>
-    /* ======= Hero Section End Here ======= */
+    <!-- /* ======= Hero Section End Here ======= */ -->
     <section id="hero">
       <div class="container">
         <div class="hero_wrapper">
@@ -63,120 +63,120 @@
 
   </header>
   <main>
-    /* ======= Plants Section Start Here ======= */
-    <section id="plants">
-      <div class="container">
-        <div class="plants_wrapper">
-          <div class="plants_content">
-            <h2 class="section-title"><span>Our</span> Plants</h2>
-            <p class="section-description">Indulge your senses with the beauty and fragrance of our fresh flower shop.
-              From classic roses to exotic
-              blooms, we
-              offer a wide variety of fresh.</p>
+    <!-- /* ======= Plants Section Start Here ======= */
+    <section id="plants"> -->
+    <div class="container">
+      <div class="plants_wrapper">
+        <div class="plants_content">
+          <h2 class="section-title"><span>Our</span> Plants</h2>
+          <p class="section-description">Indulge your senses with the beauty and fragrance of our fresh flower shop.
+            From classic roses to exotic
+            blooms, we
+            offer a wide variety of fresh.</p>
+        </div>
+        <div class="plants_items">
+          <div class="plants_item">
+            <div class="item_img">
+              <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+            </div>
+            <div class="item_content">
+              <h4>Lily Blossom</h4>
+              <span>20 USD</span>
+            </div>
+            <div class="item-button">
+              ADD TO CART
+            </div>
           </div>
-          <div class="plants_items">
-            <div class="plants_item">
-              <div class="item_img">
-                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
-              </div>
-              <div class="item_content">
-                <h4>Lily Blossom</h4>
-                <span>20 USD</span>
-              </div>
-              <div class="item-button">
-                ADD TO CART
-              </div>
+          <div class="plants_item">
+            <div class="item_img">
+              <img src="./images/sample-flower-image.png" alt="sample-flower-image">
             </div>
-            <div class="plants_item">
-              <div class="item_img">
-                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
-              </div>
-              <div class="item_content">
-                <h4>Lily Blossom</h4>
-                <span>20 USD</span>
-              </div>
-              <div class="item-button">
-                ADD TO CART
-              </div>
+            <div class="item_content">
+              <h4>Lily Blossom</h4>
+              <span>20 USD</span>
             </div>
-            <div class="plants_item">
-              <div class="item_img">
-                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
-              </div>
-              <div class="item_content">
-                <h4>Lily Blossom</h4>
-                <span>20 USD</span>
-              </div>
-              <div class="item-button">
-                ADD TO CART
-              </div>
+            <div class="item-button">
+              ADD TO CART
             </div>
-            <div class="plants_item">
-              <div class="item_img">
-                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
-              </div>
-              <div class="item_content">
-                <h4>Lily Blossom</h4>
-                <span>20 USD</span>
-              </div>
-              <div class="item-button">
-                ADD TO CART
-              </div>
+          </div>
+          <div class="plants_item">
+            <div class="item_img">
+              <img src="./images/sample-flower-image.png" alt="sample-flower-image">
             </div>
-            <div class="plants_item">
-              <div class="item_img">
-                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
-              </div>
-              <div class="item_content">
-                <h4>Lily Blossom</h4>
-                <span>20 USD</span>
-              </div>
-              <div class="item-button">
-                ADD TO CART
-              </div>
+            <div class="item_content">
+              <h4>Lily Blossom</h4>
+              <span>20 USD</span>
             </div>
-            <div class="plants_item">
-              <div class="item_img">
-                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
-              </div>
-              <div class="item_content">
-                <h4>Lily Blossom</h4>
-                <span>20 USD</span>
-              </div>
-              <div class="item-button">
-                ADD TO CART
-              </div>
+            <div class="item-button">
+              ADD TO CART
             </div>
-            <div class="plants_item">
-              <div class="item_img">
-                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
-              </div>
-              <div class="item_content">
-                <h4>Lily Blossom</h4>
-                <span>20 USD</span>
-              </div>
-              <div class="item-button">
-                ADD TO CART
-              </div>
+          </div>
+          <div class="plants_item">
+            <div class="item_img">
+              <img src="./images/sample-flower-image.png" alt="sample-flower-image">
             </div>
-            <div class="plants_item">
-              <div class="item_img">
-                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
-              </div>
-              <div class="item_content">
-                <h4>Lily Blossom</h4>
-                <span>20 USD</span>
-              </div>
-              <div class="item-button">
-                ADD TO CART
-              </div>
+            <div class="item_content">
+              <h4>Lily Blossom</h4>
+              <span>20 USD</span>
+            </div>
+            <div class="item-button">
+              ADD TO CART
+            </div>
+          </div>
+          <div class="plants_item">
+            <div class="item_img">
+              <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+            </div>
+            <div class="item_content">
+              <h4>Lily Blossom</h4>
+              <span>20 USD</span>
+            </div>
+            <div class="item-button">
+              ADD TO CART
+            </div>
+          </div>
+          <div class="plants_item">
+            <div class="item_img">
+              <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+            </div>
+            <div class="item_content">
+              <h4>Lily Blossom</h4>
+              <span>20 USD</span>
+            </div>
+            <div class="item-button">
+              ADD TO CART
+            </div>
+          </div>
+          <div class="plants_item">
+            <div class="item_img">
+              <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+            </div>
+            <div class="item_content">
+              <h4>Lily Blossom</h4>
+              <span>20 USD</span>
+            </div>
+            <div class="item-button">
+              ADD TO CART
+            </div>
+          </div>
+          <div class="plants_item">
+            <div class="item_img">
+              <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+            </div>
+            <div class="item_content">
+              <h4>Lily Blossom</h4>
+              <span>20 USD</span>
+            </div>
+            <div class="item-button">
+              ADD TO CART
             </div>
           </div>
         </div>
       </div>
+    </div>
     </section>
-    /* ======= Plants Section End Here ======= */
-    /* ======= Plants Lover Section Start Here ======= */
+    <!-- /* ======= Plants Section End Here ======= */ -->
+    <!-- /* ======= Plants Lover Section Start Here ======= */ -->
     <section id="plantsLover">
       <div class="container">
         <div class="plantsLover_wrapper">
@@ -205,13 +205,58 @@
         </div>
       </div>
     </section>
-    /* ======= Plants Lover Section End Here ======= */
-    /* ======= navbar Section Start Here ======= */
-    /* ======= navbar Section End Here ======= */
-    /* ======= navbar Section Start Here ======= */
-    /* ======= navbar Section End Here ======= */
-    /* ======= navbar Section Start Here ======= */
-    /* ======= navbar Section End Here ======= */
+    <!-- /* ======= Plants Lover Section End Here ======= */ -->
+    <!-- /* ======= Deals Section Start Here ======= */ -->
+    <section id="deals">
+      <div class="container">
+        <div class="deals_wrapper">
+          <div class="deals_content">
+            <h2 class="section-title"><span>Our</span> Plants</h2>
+            <p class="section-description">Indulge your senses with the beauty and fragrance of our fresh flower shop.
+              From classic roses to exotic
+              blooms, we
+              offer a wide variety of fresh.</p>
+
+          </div>
+          <div class="deals_image">
+            <div class="deals_image_left">
+              <div class="image_item">
+                <img src="./images/deal-bloom.png" alt="deal-bloom" />
+                <div class="overlay"></div>
+                <div class="image_item_content">
+                  <h5>60% Off | Bloom Plant</h5>
+                  <a href="#">Shop Now</a>
+                </div>
+              </div>
+
+              <div class="image_item">
+                <img src="./images/deal-bloom.png" alt="deal-bloom" />
+                <div class="overlay"></div>
+                <div class="image_item_content">
+                  <h5>60% Off | Bloom Plant</h5>
+                  <a href="#">Shop Now</a>
+                </div>
+              </div>
+
+            </div>
+            <div class="deals_image_right">
+              <div class="overlay"></div>
+              <img src="./images/deal-zabo.png" alt="deal-zabo">
+              <div class="image_item_right_content">
+                <h5>25% Off | Zabo Plant</h5>
+                <a href="#">Shop Now</a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /* ======= Deals Section End Here ======= */ -->
+    <!-- /* ======= navbar Section Start Here ======= */ -->
+    <!-- /* ======= navbar Section End Here ======= */ -->
+    <!-- /* ======= navbar Section Start Here ======= */ -->
+    <!-- /* ======= navbar Section End Here ======= */ -->
 
 
   </main>
