dels section image path change and content change

--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
               </div>
 
               <div class="image_item">
-                <img src="./images/deal-bloom.png" alt="deal-bloom" />
+                <img src="./images/deal-ana.png" alt="deal-bloom" />
                 <div class="overlay"></div>
                 <div class="image_item_content">
-                  <h5>60% Off | Bloom Plant</h5>
+                  <h5>30% Off | Ana Plant</h5>
                   <a href="#">Shop Now</a>
                 </div>
               </div>
