Join section finised with responsive

--- a/index.html
+++ b/index.html
@@ -253,8 +253,22 @@
       </div>
     </section>
     <!-- /* ======= Deals Section End Here ======= */ -->
-    <!-- /* ======= navbar Section Start Here ======= */ -->
-    <!-- /* ======= navbar Section End Here ======= */ -->
+    <!-- /* ======= Join Section Start Here ======= */ -->
+    <section id="join">
+      <div class="container">
+        <div class="section_wrapper">
+          <h2>Join the colorful Bunch</h2>
+          <div class="input_field">
+            <input type="text" placeholder="Write email">
+            <button>
+              Subscribe
+
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /* ======= Join Section End Here ======= */ -->
     <!-- /* ======= navbar Section Start Here ======= */ -->
     <!-- /* ======= navbar Section End Here ======= */ -->
 
