footer section done , some section are correction

--- a/index.html
+++ b/index.html
@@ -268,12 +268,48 @@
         </div>
       </div>
     </section>
-    <!-- /* ======= Join Section End Here ======= */ -->
-    <!-- /* ======= navbar Section Start Here ======= */ -->
+
     <!-- /* ======= navbar Section End Here ======= */ -->
 
 
   </main>
+  <footer id="footer">
+    <div class="container">
+      <div class="footer_wrapper">
+        <div class="footer_logo_section">
+          <img src="./images/logo.png" alt="footer_logo">
+          <p>Indulge your senses with the beauty and fragrance of our fresh flower shop.</p>
+
+        </div>
+        <div class="footer_menu_one">
+          <ul class="link_one">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="footer_menu_two">
+          <ul class="link_two">
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Service</a></li>
+            <li><a href="#">Terms of Service</a></li>
+            <li><a href="#">Help Center</a></li>
+          </ul>
+        </div>
+        <div class="footer_icon_section">
+          <img src="./images/icon-linkedin.png" alt="icon-linkedin">
+          <img src="./images/icon-twitter.png" alt="icon-twitter">
+          <img src="./images/icon-facebook.png" alt="icon-facebook">
+          <img src="./images/icon-youtube.png" alt="icon-youtube">
+        </div>
+
+      </div>
+    </div>
+  </footer>
 
 </body>
 
