fixed plants section and navbar thers was minore issue

--- a/index.html
+++ b/index.html
@@ -63,118 +63,123 @@
 
   </header>
   <main>
-    <!-- /* ======= Plants Section Start Here ======= */
-    <section id="plants"> -->
-    <div class="container">
-      <div class="plants_wrapper">
-        <div class="plants_content">
-          <h2 class="section-title"><span>Our</span> Plants</h2>
-          <p class="section-description">Indulge your senses with the beauty and fragrance of our fresh flower shop.
-            From classic roses to exotic
-            blooms, we
-            offer a wide variety of fresh.</p>
-        </div>
-        <div class="plants_items">
-          <div class="plants_item">
-            <div class="item_img">
-              <img src="./images/sample-flower-image.png" alt="sample-flower-image">
-            </div>
-            <div class="item_content">
-              <h4>Lily Blossom</h4>
-              <span>20 USD</span>
-            </div>
-            <div class="item-button">
-              ADD TO CART
-            </div>
+
+    <section id="plants">
+      <div class="container">
+        <div class="plants_wrapper">
+          <div class="plants_content">
+            <h2 class="section-title"><span>Our</span> Plants</h2>
+            <p class="section-description">Indulge your senses with the beauty and fragrance of our fresh flower shop.
+              From classic roses to exotic
+              blooms, we
+              offer a wide variety of fresh.</p>
           </div>
-          <div class="plants_item">
-            <div class="item_img">
-              <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+          <div class="plants_items">
+            <div class="plants_item">
+              <div class="item_img">
+                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+              </div>
+              <div class="item_content">
+                <h4>Lily Blossom</h4>
+                <span>20 USD</span>
+              </div>
+              <div class="item-button">
+                ADD TO CART
+              </div>
             </div>
-            <div class="item_content">
-              <h4>Lily Blossom</h4>
-              <span>20 USD</span>
+            <div class="plants_item">
+              <div class="item_img">
+                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+              </div>
+              <div class="item_content">
+                <h4>Lily Blossom</h4>
+                <span>20 USD</span>
+              </div>
+              <div class="item-button">
+                ADD TO CART
+              </div>
             </div>
-            <div class="item-button">
-              ADD TO CART
+            <div class="plants_item">
+              <div class="item_img">
+                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+              </div>
+              <div class="item_content">
+                <h4>Lily Blossom</h4>
+                <span>20 USD</span>
+              </div>
+              <div class="item-button">
+                ADD TO CART
+              </div>
             </div>
-          </div>
-          <div class="plants_item">
-            <div class="item_img">
-              <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+            <div class="plants_item">
+              <div class="item_img">
+                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+              </div>
+              <div class="item_content">
+                <h4>Lily Blossom</h4>
+                <span>20 USD</span>
+              </div>
+              <div class="item-button">
+                ADD TO CART
+              </div>
             </div>
-            <div class="item_content">
-              <h4>Lily Blossom</h4>
-              <span>20 USD</span>
+            <div class="plants_item">
+              <div class="item_img">
+                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+              </div>
+              <div class="item_content">
+                <h4>Lily Blossom</h4>
+                <span>20 USD</span>
+              </div>
+              <div class="item-button">
+                ADD TO CART
+              </div>
             </div>
-            <div class="item-button">
-              ADD TO CART
+            <div class="plants_item">
+              <div class="item_img">
+                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+              </div>
+              <div class="item_content">
+                <h4>Lily Blossom</h4>
+                <span>20 USD</span>
+              </div>
+              <div class="item-button">
+                ADD TO CART
+              </div>
             </div>
-          </div>
-          <div class="plants_item">
-            <div class="item_img">
-              <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+            <div class="plants_item">
+              <div class="item_img">
+                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+              </div>
+              <div class="item_content">
+                <h4>Lily Blossom</h4>
+                <span>20 USD</span>
+              </div>
+              <div class="item-button">
+                ADD TO CART
+              </div>
             </div>
-            <div class="item_content">
-              <h4>Lily Blossom</h4>
-              <span>20 USD</span>
-            </div>
-            <div class="item-button">
-              ADD TO CART
-            </div>
-          </div>
-          <div class="plants_item">
-            <div class="item_img">
-              <img src="./images/sample-flower-image.png" alt="sample-flower-image">
-            </div>
-            <div class="item_content">
-              <h4>Lily Blossom</h4>
-              <span>20 USD</span>
-            </div>
-            <div class="item-button">
-              ADD TO CART
-            </div>
-          </div>
-          <div class="plants_item">
-            <div class="item_img">
-              <img src="./images/sample-flower-image.png" alt="sample-flower-image">
-            </div>
-            <div class="item_content">
-              <h4>Lily Blossom</h4>
-              <span>20 USD</span>
-            </div>
-            <div class="item-button">
-              ADD TO CART
-            </div>
-          </div>
-          <div class="plants_item">
-            <div class="item_img">
-              <img src="./images/sample-flower-image.png" alt="sample-flower-image">
-            </div>
-            <div class="item_content">
-              <h4>Lily Blossom</h4>
-              <span>20 USD</span>
-            </div>
-            <div class="item-button">
-              ADD TO CART
-            </div>
-          </div>
-          <div class="plants_item">
-            <div class="item_img">
-              <img src="./images/sample-flower-image.png" alt="sample-flower-image">
-            </div>
-            <div class="item_content">
-              <h4>Lily Blossom</h4>
-              <span>20 USD</span>
-            </div>
-            <div class="item-button">
-              ADD TO CART
+            <div class="plants_item">
+              <div class="item_img">
+                <img src="./images/sample-flower-image.png" alt="sample-flower-image">
+              </div>
+              <div class="item_content">
+                <h4>Lily Blossom</h4>
+                <span>20 USD</span>
+              </div>
+              <div class="item-button">
+                ADD TO CART
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
     </section>
+    <!-- /* ======= Plants Section Start Here ======= */
+
+    
+    
+
     <!-- /* ======= Plants Section End Here ======= */ -->
     <!-- /* ======= Plants Lover Section Start Here ======= */ -->
     <section id="plantsLover">
@@ -295,7 +300,6 @@
             <li><a href="#">Features</a></li>
             <li><a href="#">Pricing</a></li>
             <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms of Service</a></li>
             <li><a href="#">Terms of Service</a></li>
             <li><a href="#">Help Center</a></li>
           </ul>
